--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mean-test",
   "version": "0.0.0",
   "scripts": {
+    "db": "mongod --dbpath ./database/",
+    "backend": "nodemon ./backend/server.js",
+    "frontend": "cd frontend; ng serve --proxy-config ./proxy.conf.json",
     "ng": "ng",
     "start": "node server.js",
     "build": "ng build",
