--- a/angular.json
+++ b/angular.json
@@ -1,11 +1,15 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
+  "version": 1, 
   "newProjectRoot": "projects",
   "projects": {
-    "mean-test": {
+    "name": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "sass"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mean-test",
+            "outputPath": "dist/name",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.sass"
             ],
             "scripts": []
           },
@@ -62,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "mean-test:build"
+            "browserTarget": "name:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "mean-test:build:production"
+              "browserTarget": "name:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "mean-test:build"
+            "browserTarget": "name:build"
           }
         },
         "test": {
@@ -88,7 +92,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.sass"
             ],
             "scripts": []
           }
@@ -110,19 +114,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "mean-test:serve"
+            "devServerTarget": "name:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "mean-test:serve:production"
+              "devServerTarget": "name:serve:production"
             }
           }
         }
       }
-    }
-  },
-  "defaultProject": "mean-test",
-  "cli": {
-    "analytics": "4a9cd99d-8b8f-49a7-b618-692715e5ac37"
-  }
+    }},
+  "defaultProject": "name"
 }
