--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "heroku-postbuild": "ng build --output-path dist --configuration=production"
-  
   },
   "private": true,
   "dependencies": {
@@ -26,6 +25,7 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "express": "^4.17.1",
     "mongoose": "^5.9.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
